<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="60dp"
		android:background="#ffffff"
        android:textSize="17dp" >
        <TextView
            android:id="@+id/weibo_share_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="18dp"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:text="@string/share_cancel"
	        android:textColor="#333333"
	        android:textSize="17dp" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/share_share"
	        android:textColor="#333333"
	        android:textSize="20dp" />
        
        <TextView
            android:id="@+id/weibo_share_ok"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="18dp"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:text="@string/share_confirm"
	        android:textColor="#3ab54a"
	        android:textSize="17dp" />
    </RelativeLayout>

    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="12dp"
        android:paddingTop="13dp"
        android:paddingRight="12dp"
        android:paddingBottom="13dp"
        android:background="#ffffff">
	    
	    <com.qihoo.around.sharecore.EditViewWithPaste
            android:id="@+id/weibo_share_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:focusableInTouchMode="true"
            android:imeOptions="actionSearch"
            android:includeFontPadding="false"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:minLines="4"
            android:maxLines="10"
            android:maxLength="140"
            android:scrollbars="vertical"
            android:textColor="#000000"
            android:textSize="16sp" >

            <requestFocus />
        </com.qihoo.around.sharecore.EditViewWithPaste>

	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="80dp"
	        android:layout_alignParentBottom="true"
	        android:background="#ffffff">
	        
	        <RelativeLayout 
	            android:id="@+id/share_capture_pic"
		        android:layout_width="64dp"
		        android:layout_height="64dp"
		        android:padding="1dp"
		        android:layout_alignParentBottom="true"
		        android:background="#666666">
		        <RelativeLayout 
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:padding="4dp"
			        android:background="#ffffff">
					    <ImageView
					        android:id="@+id/weibo_share_photo"
					        android:layout_width="match_parent"
					        android:layout_height="match_parent"/>
				</RelativeLayout>
		    </RelativeLayout>
		    
	        <ImageView
	            android:id="@+id/weibo_share_closephoto"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignRight="@+id/share_capture_pic"
		        android:layout_alignTop="@+id/share_capture_pic"
		        android:layout_marginRight="-10dp"
		        android:layout_marginTop="-10dp"
		        android:background="@drawable/weiboshare_close_ic" />
		    
		    <TextView
		        android:id="@+id/weibo_share_words"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_alignParentBottom="true"
		        android:text="还可以输入140字"
		        android:textColor="#9b9b9b"
		        android:textSize="17dp" />
   		</RelativeLayout>
    </RelativeLayout>
</LinearLayout>